@@ -2984,14 +2984,14 @@ to get more information on a command.</p>
     <td>IRCop</td>
   </tr>
   <tr> 
-    <td height="39">restart &lt;server&gt; &lt;password&gt;<br></td>
-    <td>Restarts the IRCD Process. Password is required. You may also include 
-      a server name to restart a remote server.<br></td>
+    <td height="39">restart &lt;password&gt; &lt;reason&gt;<br></td>
+    <td>Restarts the IRCD Process. Password is required if drpass { } is present. 
+        You may also include a reason.<br></td>
     <td>IRCop</td>
   </tr>
   <tr> 
     <td height="39">die &lt;password&gt;<br></td>
-    <td>Terminates the IRCD Process. Password is required</td>
+    <td>Terminates the IRCD Process. Password is required if drpass { } is present.</td>
     <td>IRCop</td>
   </tr>
   <tr> 
