@@ -881,7 +881,7 @@ help Restart {
 	" -";
 	" Syntax: RESTART";
 	"         RESTART <password>";
-	"         RESTART <server> <password>";
+	"         RESTART <password> <reason>";
 };
 
 help Die {
